--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Autonomous AI Assistant for monday.com",
-  "version": "1.1",
+  "version": "2.0",
   "description": "An intelligent gateway to monday.com that provides contextual awareness and task creation.",
   "permissions": [
     "storage"
@@ -27,6 +27,6 @@
     "service_worker": "background.js"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data:; connect-src https://api.monday.com/ https://generativelanguage.googleapis.com/;"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data:;"
   }
 }
